<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Androsens Classic</string>
    <string name="action_settings">Settings</string>
    <string name="preferences_contactDeveloperCat">Developer</string>
    <string name="preferences_contactDeveloperTitel">Contact developer</string>
    <string name="preferences_contactDeveloperDescription">E-Mail christian.d.schneider@googlemail.com</string>
    <string name="preferences_rateAppTitel">Rate</string>
    <string name="preferences_rateAppDescription">Rate this app in google play store</string>
    <string name="preferences_sensorDelayTitle">Sensor delay</string>
    <string name="preferences_sensorDelaySummary">Defines how fast updates will be performed</string>
    <string name="SENSORINFO_TYPE_ACCELEROMETER">ACCELEROMETER</string>
    <string name="SENSORINFO_TYPE_ALL">ALL</string>
    <string name="SENSORINFO_TYPE_AMBIENT_TEMPERATURE">AMBIENT_TEMPERATURE</string>
    <string name="SENSORINFO_TYPE_GAME_ROTATION_VECTOR">GAME_ROTATION_VECTOR</string>
    <string name="SENSORINFO_TYPE_GEOMAGNETIC_ROTATION_VECTOR">GEOMAGNETIC_ROTATION_VECTOR</string>
    <string name="SENSORINFO_TYPE_GRAVITY">GRAVITY</string>
    <string name="SENSORINFO_TYPE_GYROSCOPE">GYROSCOPE</string>
    <string name="SENSORINFO_TYPE_GYROSCOPE_UNCALIBRATED">GYROSCOPE_UNCALIBRATED</string>
    <string name="SENSORINFO_TYPE_LIGHT">LIGHT</string>
    <string name="SENSORINFO_TYPE_LINEAR_ACCELERATION">LINEAR_ACCELERATION</string>
    <string name="SENSORINFO_TYPE_MAGNETIC_FIELD">MAGNETIC_FIELD</string>
    <string name="SENSORINFO_TYPE_MAGNETIC_FIELD_UNCALIBRATED">TYPE_MAGNETIC_FIELD_UNCALIBRATED</string>
    <string name="SENSORINFO_TYPE_ORIENTATION">ORIENTATION</string>
    <string name="SENSORINFO_TYPE_PRESSURE">PRESSURE</string>
    <string name="SENSORINFO_TYPE_PROXIMITY">PROXIMITY</string>
    <string name="SENSORINFO_TYPE_RELATIVE_HUMIDITY">RELATIVE_HUMIDITY</string>
    <string name="SENSORINFO_TYPE_ROTATION_VECTOR">ROTATION_VECTOR</string>
    <string name="SENSORINFO_TYPE_SIGNIFICANT_MOTION">SIGNIFICANT_MOTION</string>
    <string name="SENSORINFO_TYPE_STEP_COUNTER">STEP_COUNTER</string>
    <string name="SENSORINFO_TYPE_STEP_DETECTOR">STEP_DETECTOR</string>
    <string name="SENSORINFO_TYPE_TEMPERATURE">TEMPERATURE</string>
    <string name="SENSORINFO_TYPE_UNKNOWN">UNKNOWN</string>
    <string name="activity_sensor_sensor_type_title">Type:</string>
    <string name="activity_sensor_sensor_vendor_title">Vendor:</string>
    <string name="activity_sensor_sensor_version_title">Version:</string>
    <string name="activity_sensor_sensor_power_title">Power:</string>
    <string name="activity_sensor_sensor_waiting_for_data">waiting for data</string>
    <string name="preferences_licenseCat">License</string>
    <string name="preferences_licenseTitle">License</string>
    <string name="preferences_licenseDescription">Displays license information</string>
    <string name="license_activity_gpl_assets_name">default-gpl.txt</string>
</resources>
